--- a/index.html
+++ b/index.html
@@ -4,92 +4,119 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Hammid Bin Aejaz | Portfolio</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 <style>
 :root {
-  --bg-light:#fff; --bg-dark:#0f172a;
+  --bg-light:#fdfdfd; --bg-dark:#0f172a;
   --text-light:#1e293b; --text-dark:#f1f5f9;
   --accent:#3b82f6;
 }
-body {margin:0;font-family:'Inter',sans-serif;background:var(--bg-light);color:var(--text-light);scroll-behavior:smooth;transition:0.3s;}
-body.dark {background:var(--bg-dark);color:var(--text-dark);}
-a {color:var(--accent);text-decoration:none;font-weight:600;transition:0.3s;}
-a:hover{text-decoration:underline;}
-.btn {display:inline-block;padding:8px 15px;background:var(--accent);color:#fff;border-radius:8px;font-weight:600;margin-top:10px;transition:0.3s;}
-.btn:hover{background:#2563eb;}
-.toggle-btn{position:fixed;top:15px;right:15px;width:50px;height:26px;background:#cbd5e1;border-radius:50px;cursor:pointer;z-index:200;}
-.circle{width:20px;height:20px;background:#fff;border-radius:50%;margin:3px;transition:0.3s;}
-body.dark .circle{transform:translateX(24px);}
-nav{position:fixed;top:0;width:100%;display:flex;justify-content:center;gap:30px;padding:15px 0;background:rgba(255,255,255,0.9);backdrop-filter:blur(10px);z-index:100;transition:0.3s;}
-body.dark nav{background:rgba(15,23,42,0.9);}
-nav a{color:var(--text-light);font-weight:600;}
-body.dark nav a{color:var(--text-dark);}
-nav a:hover{color:var(--accent);}
-.container{width:90%;max-width:1000px;margin:auto;padding:120px 20px 50px;}
-section{margin-bottom:60px;opacity:0;transform:translateY(30px);transition:all 0.8s ease-out;}
-section.visible{opacity:1;transform:translateY(0);}
-h2{text-align:center;color:var(--accent);margin-bottom:30px;font-size:1.8rem;}
-.hero{display:flex;flex-direction:column;align-items:center;text-align:center;padding:60px 0;}
-.profile-photo{width:150px;height:150px;border-radius:50%;border:3px solid var(--accent);margin-bottom:20px;object-fit:cover;}
-.hero h1{font-size:2.3em;margin-bottom:10px;font-weight:700;}
-.hero p.intro{font-size:1.1em;line-height:1.6;max-width:650px;margin-bottom:15px;}
-.grid{display:flex;flex-wrap:wrap;gap:20px;justify-content:center;}
-.card{background:#f8fafc;padding:20px;border-radius:12px;width:280px;text-align:center;box-shadow:0 4px 12px rgba(0,0,0,0.08);transition:all 0.3s;}
-.card:hover{transform:translateY(-5px);box-shadow:0 6px 16px rgba(0,0,0,0.12);}
-body.dark .card{background:#1e293b;}
-.card i{font-size:2em;margin-bottom:10px;color:var(--accent);}
-footer{text-align:center;padding:2rem;font-size:0.9rem;color:#94a3b8;}
-@media(max-width:600px){.card{width:100%;} nav{flex-direction:column;gap:10px;}}
-
-/* Me Core / Books */
-#me-core .book-grid {display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:15px;margin-top:20px;}
-.book-card {background:#fff;color:#1e293b;padding:15px;border-radius:8px;box-shadow:0 2px 6px rgba(0,0,0,0.08);transition:all 0.3s;opacity:0;transform:translateY(10px);}
-.book-card.visible {opacity:1;transform:translateY(0);}
-body.dark .book-card {background:#1e293b;color:#f1f5f9;box-shadow:0 2px 6px rgba(0,0,0,0.3);}
-.book-card:hover {transform:translateY(-4px);box-shadow:0 4px 8px rgba(0,0,0,0.12);}
+* { box-sizing:border-box; margin:0; padding:0; }
+body { font-family:'Inter',sans-serif; background:var(--bg-light); color:var(--text-light); line-height:1.6; scroll-behavior:smooth; transition:0.4s; }
+body.dark { background:var(--bg-dark); color:var(--text-dark); }
+nav {
+  position:fixed; top:0; width:100%; display:flex; justify-content:center; gap:25px;
+  padding:15px 0; background:rgba(255,255,255,0.85); backdrop-filter:blur(10px);
+  z-index:100; font-weight:500; transition:0.3s;
+}
+body.dark nav { background:rgba(15,23,42,0.85); }
+nav a { color:var(--text-light); text-decoration:none; transition:0.3s; }
+body.dark nav a { color:var(--text-dark); }
+nav a:hover { color:var(--accent); }
+.toggle-btn {
+  position:fixed; top:15px; right:15px; width:45px; height:45px;
+  border-radius:50%; background:var(--accent); color:#fff;
+  display:flex; align-items:center; justify-content:center; cursor:pointer; font-size:1.2rem; z-index:200;
+  transition:0.3s;
+}
+.toggle-btn:hover { transform: scale(1.1) rotate(10deg); }
+.container { width:90%; max-width:1100px; margin:auto; padding-top:100px; }
+section { margin-bottom:80px; opacity:0; transform:translateY(30px); transition: all 0.8s ease-out; }
+section.visible { opacity:1; transform:translateY(0); }
+h2 { text-align:center; color:var(--accent); font-size:2rem; margin-bottom:40px; font-weight:600; }
+.hero { text-align:center; padding:80px 20px; }
+.profile-photo { width:160px; height:160px; border-radius:50%; border:4px solid var(--accent); object-fit:cover; margin-bottom:20px; box-shadow:0 6px 20px rgba(0,0,0,0.12); transition: transform 0.4s, box-shadow 0.4s; }
+.profile-photo:hover { transform:scale(1.08) rotate(1deg); box-shadow:0 12px 30px rgba(0,0,0,0.2); }
+.hero h1 { font-size:2.5rem; margin-bottom:10px; font-weight:700; letter-spacing:1px; }
+.hero p.intro { font-size:1.1rem; max-width:650px; margin:auto; margin-bottom:20px; }
+.btn { display:inline-block; padding:10px 20px; background:var(--accent); color:#fff; border-radius:8px; font-weight:600; transition:0.3s; margin-top:10px; }
+.btn:hover { background:#2563eb; transform:translateY(-2px); }
+.grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
+.card { background:#fff; padding:25px; border-radius:15px; text-align:center; box-shadow:0 6px 15px rgba(0,0,0,0.08); transition: transform 0.4s, box-shadow 0.4s; position:relative; cursor:pointer; }
+body.dark .card { background:#1e293b; }
+.card:hover { transform:translateY(-5px) scale(1.03); box-shadow:0 10px 25px rgba(0,0,0,0.15); }
+.card i { font-size:2rem; margin-bottom:10px; color:var(--accent); }
+.skill-tooltip {
+  position:absolute; bottom:110%; left:50%; transform:translateX(-50%);
+  background:var(--accent); color:#fff; padding:8px 14px; border-radius:10px;
+  font-size:0.95rem; opacity:0; pointer-events:none; transition: all 0.4s ease;
+  white-space:nowrap; z-index:50;
+}
+/* Books & Hobbies */
+.book-row, .grid.hobbies { display:flex; justify-content:center; flex-wrap:wrap; gap:15px; overflow-x:auto; padding-bottom:10px; }
+.book-card, .card.hobby-card {
+  flex:0 0 auto; background:#fff; padding:12px 15px; border-radius:10px; 
+  box-shadow:0 4px 12px rgba(0,0,0,0.08); text-align:center; 
+  min-width:140px; opacity:0; transform:translateY(20px);
+  transition:all 0.5s ease, transform 0.3s ease;
+  cursor:default;
+}
+body.dark .book-card, body.dark .card.hobby-card { background:#1e293b; color:#f1f5f9; box-shadow:0 4px 12px rgba(0,0,0,0.3); }
+.book-card.visible, .card.hobby-card.visible { opacity:1; transform:translateY(0); }
+.book-card:hover, .card.hobby-card:hover { transform:translateY(-5px) scale(1.05) rotateZ(1deg); box-shadow:0 8px 20px rgba(0,0,0,0.15); }
+.book-card h4, .card.hobby-card h4 { font-size:1rem; margin-bottom:4px; font-weight:600; }
+.book-card p, .card.hobby-card p { font-size:0.85rem; color:#64748b; }
+body.dark .book-card p, body.dark .card.hobby-card p { color:#cbd5e1; }
+footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
+@media(max-width:600px){ nav{ flex-direction:column; gap:10px; } .book-row{overflow-x:auto;} }
 </style>
 </head>
 <body>
 
-<div class="toggle-btn" id="themeToggle"><div class="circle"></div></div>
+<div class="toggle-btn" id="themeToggle"><i class="fas fa-moon"></i></div>
 
 <nav>
-<a href="#about">About</a>
-<a href="#skills">Skills</a>
-<a href="#projects">Projects</a>
-<a href="#certificates">Certificates</a>
-<a href="#hobbies">Hobbies</a>
-<a href="#me-core">Me Core</a>
-<a href="#contact">Contact</a>
+  <a href="#about">About</a>
+  <a href="#skills">Skills</a>
+  <a href="#projects">Projects</a>
+  <a href="#certificates">Certificates</a>
+  <a href="#hobbies">Hobbies</a>
+  <a href="#books">Me Core</a>
+  <a href="#contact">Contact</a>
 </nav>
 
 <div class="container">
 
 <!-- About -->
 <section id="about" class="hero">
-<img src="assets/profile.jpg" alt="Hammid Bin Aejaz" class="profile-photo">
-<h1>Hammid Bin Aejaz</h1>
-<p class="intro">Hi! I’m Hammid, an AI & ML enthusiast. I enjoy turning data into insights and building smart systems.</p>
-<p><a href="mailto:hammidbinaejaz@gmail.com">Email</a> | <a href="https://github.com/hammidbinaejaz" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/hamid-bin-aejaz-7b7b392a2/" target="_blank">LinkedIn</a></p>
+  <img src="assets/profile.jpg" alt="Hammid Bin Aejaz" class="profile-photo">
+  <h1>Hammid Bin Aejaz</h1>
+  <p class="intro">Hi! I’m Hammid, an AI & ML <span style="color:var(--accent)">enthusiast</span>. I enjoy turning data into insights and building smart systems.</p>
+  <p>
+    <a href="mailto:hammidbinaejaz@gmail.com">Email</a> | 
+    <a href="https://github.com/hammidbinaejaz" target="_blank">GitHub</a> | 
+    <a href="https://www.linkedin.com/in/hamid-bin-aejaz-7b7b392a2/" target="_blank">LinkedIn</a>
+  </p>
+  <a class="btn" href="assets/Resume.pdf" download>Download Resume</a>
 </section>
 
 <!-- Skills -->
 <section id="skills">
 <h2>Skills</h2>
-<div class="grid">
-<div class="card"><i class="fab fa-python"></i>Python</div>
-<div class="card"><i class="fab fa-java"></i>Java</div>
-<div class="card"><i class="fas fa-c"></i>C</div>
-<div class="card"><i class="fas fa-robot"></i>Machine Learning</div>
-<div class="card"><i class="fas fa-chart-line"></i>Data Analytics</div>
-<div class="card"><i class="fas fa-brain"></i>Artificial Intelligence</div>
-<div class="card"><i class="fas fa-database"></i>EDA</div>
-<div class="card"><i class="fas fa-project-diagram"></i>Pandas / NumPy / Sklearn</div>
-<div class="card"><i class="fab fa-git-alt"></i>Git / GitHub</div>
-<div class="card"><i class="fas fa-network-wired"></i>DSA</div>
-<div class="card"><i class="fas fa-server"></i>Networking</div>
-<div class="card"><i class="fas fa-layer-group"></i>Deep Learning</div>
+<div class="grid" id="skillsGrid">
+  <div class="card" data-info="Proficient in Python programming, ML frameworks, and data analysis."><i class="fab fa-python"></i>Python</div>
+  <div class="card" data-info="Object-oriented and enterprise-level programming experience."><i class="fab fa-java"></i>Java</div>
+  <div class="card" data-info="Strong foundation in C programming and algorithms."><i class="fas fa-c"></i>C</div>
+  <div class="card" data-info="Build ML models for predictions and classification."><i class="fas fa-robot"></i>Machine Learning</div>
+  <div class="card" data-info="Analyze datasets to extract actionable insights."><i class="fas fa-chart-line"></i>Data Analytics</div>
+  <div class="card" data-info="AI concepts and neural networks understanding."><i class="fas fa-brain"></i>Artificial Intelligence</div>
+  <div class="card" data-info="Exploratory Data Analysis using Python libraries."><i class="fas fa-database"></i>EDA</div>
+  <div class="card" data-info="Data manipulation and modeling with Pandas, NumPy, Sklearn."><i class="fas fa-project-diagram"></i>Pandas / NumPy / Sklearn</div>
+  <div class="card" data-info="Version control and collaboration using Git/GitHub."><i class="fab fa-git-alt"></i>Git / GitHub</div>
+  <div class="card" data-info="Strong Data Structures and Algorithms knowledge."><i class="fas fa-network-wired"></i>DSA</div>
+  <div class="card" data-info="Understanding of computer networks and protocols."><i class="fas fa-server"></i>Networking</div>
+  <div class="card" data-info="Deep learning frameworks, neural networks implementation."><i class="fas fa-layer-group"></i>Deep Learning</div>
 </div>
 </section>
 
@@ -97,9 +124,9 @@ body.dark .book-card {background:#1e293b;color:#f1f5f9;box-shadow:0 2px 6px rgba
 <section id="projects">
 <h2>Projects</h2>
 <div class="grid">
-<div class="card"><h3>Embedded AI for Websites</h3><p>Lightweight AI models for real-time website interaction.</p></div>
-<div class="card"><h3>Movie Recommendation System</h3><p>Collaborative filtering & content-based engine.</p><a class="btn" href="https://github.com/hammidbinaejaz/movie-recommended-system" target="_blank">GitHub Repo</a></div>
-<div class="card"><h3>IPL Win Predictor</h3><p>Predictive model on IPL datasets with ~85% accuracy.</p><a class="btn" href="https://github.com/hammidbinaejaz/IPL-Win-Predictor" target="_blank">GitHub Repo</a></div>
+  <div class="card"><h3>Embedded AI for Websites</h3><p>Lightweight AI models for real-time website interaction.</p></div>
+  <div class="card"><h3>Movie Recommendation System</h3><p>Collaborative filtering & content-based engine.</p><a class="btn" href="https://github.com/hammidbinaejaz/movie-recommended-system" target="_blank">GitHub Repo</a></div>
+  <div class="card"><h3>IPL Win Predictor</h3><p>Predictive model on IPL datasets with ~85% accuracy.</p><a class="btn" href="https://github.com/hammidbinaejaz/IPL-Win-Predictor" target="_blank">GitHub Repo</a></div>
 </div>
 </section>
 
@@ -107,37 +134,37 @@ body.dark .book-card {background:#1e293b;color:#f1f5f9;box-shadow:0 2px 6px rgba
 <section id="certificates">
 <h2>Certificates</h2>
 <div class="grid">
-<div class="card"><h3>AI Fundamentals – IBM</h3><p><a class="btn" href="assets/IBMDesign20250820-28-p0i2bg.pdf" download>Download</a></p></div>
-<div class="card"><h3>Data Structures – Infosys</h3></div>
-<div class="card"><h3>Advanced DSA – Infosys</h3></div>
-<div class="card"><h3>Artificial Intelligence – Infosys</h3></div>
-<div class="card"><h3>Querying SQL – Infosys</h3></div>
+  <div class="card"><h3>AI Fundamentals – IBM</h3><a class="btn" href="assets/IBMDesign20250820-28-p0i2bg.pdf" download>Download</a></div>
+  <div class="card"><h3>Data Structures – Infosys</h3></div>
+  <div class="card"><h3>Advanced DSA – Infosys</h3></div>
+  <div class="card"><h3>Artificial Intelligence – Infosys</h3></div>
+  <div class="card"><h3>Querying SQL – Infosys</h3></div>
 </div>
 </section>
 
 <!-- Hobbies -->
 <section id="hobbies">
 <h2>Hobbies</h2>
-<div class="grid">
-<div class="card"><i class="fas fa-utensils"></i>Cooking</div>
-<div class="card"><i class="fas fa-mountain"></i>Trekking</div>
-<div class="card"><i class="fas fa-gamepad"></i>Sudoku</div>
-<div class="card"><i class="fas fa-pen-nib"></i>Writing Poems</div>
+<div class="book-row hobbies">
+  <div class="card hobby-card"><i class="fas fa-utensils"></i><h4>Cooking</h4></div>
+  <div class="card hobby-card"><i class="fas fa-mountain"></i><h4>Trekking</h4></div>
+  <div class="card hobby-card"><i class="fas fa-gamepad"></i><h4>Sudoku</h4></div>
+  <div class="card hobby-card"><i class="fas fa-pen-nib"></i><h4>Writing Poems</h4></div>
 </div>
 </section>
 
 <!-- Me Core -->
-<section id="me-core">
+<section id="books">
 <h2>Me Core</h2>
-<div class="book-grid">
-<div class="book-card"><h3>Atomic Habits</h3><p>James Clear</p></div>
-<div class="book-card"><h3>Do Your Work</h3><p>Steven Pressfield</p></div>
-<div class="book-card"><h3>Why We Sleep</h3><p>Matthew Walker</p></div>
-<div class="book-card"><h3>The Subtle Art of Not Giving a F*ck</h3><p>Mark Manson</p></div>
-<div class="book-card"><h3>The Brain: The Story of You</h3><p>David Eagleman</p></div>
-<div class="book-card"><h3>Pir-e-Kamil</h3><p>Umera Ahmed</p></div>
-<div class="book-card"><h3>The Happiness Advantage</h3><p>Shawn Achor</p></div>
-<div class="book-card"><h3>The Courage to Be Disliked</h3><p>Ichiro Kishimi & Fumitake Koga</p></div>
+<div class="book-row">
+  <div class="book-card"><h4>Atomic Habits</h4><p>James Clear</p></div>
+  <div class="book-card"><h4>Do Your Work</h4><p>Steven Pressfield</p></div>
+  <div class="book-card"><h4>Why We Sleep</h4><p>Matthew Walker</p></div>
+  <div class="book-card"><h4>The Subtle Art of Not Giving a F*ck</h4><p>Mark Manson</p></div>
+  <div class="book-card"><h4>The Brain: The Story of You</h4><p>David Eagleman</p></div>
+  <div class="book-card"><h4>Pir-e-Kamil</h4><p>Umera Ahmed</p></div>
+  <div class="book-card"><h4>The Happiness Advantage</h4><p>Shawn Achor</p></div>
+  <div class="book-card"><h4>The Courage to Be Disliked</h4><p>Ichiro Kishimi & Fumitake Koga</p></div>
 </div>
 </section>
 
@@ -145,12 +172,12 @@ body.dark .book-card {background:#1e293b;color:#f1f5f9;box-shadow:0 2px 6px rgba
 <section id="contact">
 <h2>Contact</h2>
 <div class="grid">
-<div class="card">
-<p>Email: <a href="mailto:hammidbinaejaz@gmail.com">hammidbinaejaz@gmail.com</a></p>
-<p>Phone: +91 9622016339</p>
-<p>Location: Bangalore, India</p>
-<a class="btn" href="assets/Resume.pdf" download>Download Resume</a>
-</div>
+  <div class="card">
+    <p>Email: <a href="mailto:hammidbinaejaz@gmail.com">hammidbinaejaz@gmail.com</a></p>
+    <p>Phone: +91 9622016339</p>
+    <p>Location: Bangalore, India</p>
+    <a class="btn" href="assets/Resume.pdf" download>Download Resume</a>
+  </div>
 </div>
 </section>
 
@@ -159,18 +186,25 @@ body.dark .book-card {background:#1e293b;color:#f1f5f9;box-shadow:0 2px 6px rgba
 <footer>© 2025 Hammid Bin Aejaz</footer>
 
 <script>
-// Dark/light toggle
+// Dark mode toggle
 document.getElementById('themeToggle').addEventListener('click', ()=>document.body.classList.toggle('dark'));
 
 // Scroll fade-in
-const sections = document.querySelectorAll('section');
+const sections = document.querySelectorAll('section, .book-card, .hobby-card');
 const observer = new IntersectionObserver(entries=>{entries.forEach(e=>{if(e.isIntersecting)e.target.classList.add('visible');});},{threshold:0.1});
 sections.forEach(sec=>observer.observe(sec));
 
-// Fade-in Me Core books
-const meCoreCards = document.querySelectorAll('#me-core .book-card');
-const observerCore = new IntersectionObserver(entries=>{entries.forEach(entry=>{if(entry.isIntersecting)entry.target.classList.add('visible');});},{threshold:0.1});
-meCoreCards.forEach(card=>observerCore.observe(card));
+// Skill tooltips
+const skills = document.querySelectorAll('#skillsGrid .card');
+skills.forEach(skill=>{
+  const tooltip = document.createElement('div');
+  tooltip.className='skill-tooltip';
+  tooltip.innerText = skill.dataset.info;
+  skill.appendChild(tooltip);
+  skill.addEventListener('mouseenter', ()=>{ tooltip.style.opacity='1'; tooltip.style.transform='translateX(-50%) translateY(-10px)'; });
+  skill.addEventListener('mouseleave', ()=>{ tooltip.style.opacity='0'; tooltip.style.transform='translateX(-50%) translateY(0)'; });
+});
 </script>
+
 </body>
 </html>
