--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
 
 <!-- Me Core -->
 <section id="books">
-<h2>Me Core</h2>
+<h2>Learning and Growth</h2>
 <div class="book-row">
   <div class="book-card"><h4>Atomic Habits</h4><p>James Clear</p></div>
   <div class="book-card"><h4>Do Your Work</h4><p>Steven Pressfield</p></div>
