--- a/index.html
+++ b/index.html
@@ -131,12 +131,26 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
 </section>
 
 <!-- Projects -->
+<!-- Projects -->
 <section id="projects">
 <h2>Projects</h2>
 <div class="grid">
   <div class="card"><h3>Embedded AI for Websites</h3><p>Lightweight AI models for real-time website interaction.</p></div>
   <div class="card"><h3>Movie Recommendation System</h3><p>Collaborative filtering & content-based engine.</p><a class="btn" href="https://github.com/hammidbinaejaz/movie-recommended-system" target="_blank">GitHub Repo</a></div>
   <div class="card"><h3>IPL Win Predictor</h3><p>Predictive model on IPL datasets with ~85% accuracy.</p><a class="btn" href="https://github.com/hammidbinaejaz/IPL-Win-Predictor" target="_blank">GitHub Repo</a></div>
+
+  <!-- New Projects -->
+  <div class="card">
+    <h3>4th Sem SVIT Notes</h3>
+    <p>Collection of study notes and resources for 4th semester.</p>
+    <a class="btn" href="https://hammidbinaejaz.github.io/4TH-SEM-SVIT-NOTES/" target="_blank">View Project</a>
+  </div>
+
+  <div class="card">
+    <h3>3rd Sem SVIT Notes</h3>
+    <p>Collection of study notes and resources for 3rd semester.</p>
+    <a class="btn" href="https://hammidbinaejaz.github.io/3RD-SEM-SVIT-NOTES/" target="_blank">View Project</a>
+  </div>
 </div>
 </section>
 
@@ -193,6 +207,9 @@ footer { text-align:center; padding:2rem; font-size:0.9rem; color:#94a3b8; }
 
 </div>
 
+<p style="text-align:center; font-style:italic; margin-bottom:10px; color:#64748b;">
+"The future belongs to those who understand that artificial intelligence is not about replacing humans, but augmenting human capabilities."
+</p>
 <footer>© 2025 Hammid Bin Aejaz</footer>
 
 <script>
